--- a/index-en.html
+++ b/index-en.html
@@ -6,7 +6,7 @@
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"http://w3id.org/digitalconstruction/Contexts","image":"http://vowl.visualdataweb.org/webvowl/#iri=http://w3id.org/digitalconstruction/Contexts","name":"Contexts in digital construction", "headline":"Document describing the ontology http://w3id.org/digitalconstruction/Contexts", "datePublished":"2019-12-20", "license":"https://creativecommons.org/licenses/by/4.0/", "author":[{"@type":"Person","name":"Seppo Törmä (seppo.torma@visualynk.com)"},{"@type":"Person","name":"Yuan Zheng (yuan.zheng@aalto.fi)"}]}</script>
+<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"http://w3id.org/digitalconstruction/Contexts","image":"http://vowl.visualdataweb.org/webvowl/#iri=http://w3id.org/digitalconstruction/Contexts","name":"Contexts in digital construction", "headline":"Document describing the ontology http://w3id.org/digitalconstruction/Contexts", "datePublished":"Thu Jan 02 17:50:37 EET 2020", "author":[{"@type":"Person","name":"Seppo Törmä (seppo.torma@visualynk.com)"},{"@type":"Person","name":"Yuan Zheng (yuan.zheng@aalto.fi)"}]}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
@@ -60,7 +60,6 @@ function loadTOC(){
 <div class="head">
 <div style="float:right">language <a href="index-en.html"><b>en</b></a> </div>
 <h1>Contexts in digital construction</h1>
-<h2>Release  2019-12-20</h2>
 
 
 <dl>
@@ -70,7 +69,7 @@ function loadTOC(){
 <dt>Imported Ontologies:</dt>
 <dd><a href="http://purl.obolibrary.org/obo/bfo.owl">bfo.owl</a></dd><dd><a href="https://w3id.org/digitalconstruction/Entities#">Entities#</a></dd>
 
-<dt>Download serialization:</dt><dd><span><a href="ontology.json" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License: </dt><dd><a href="https://creativecommons.org/licenses/by/4.0/" target="_blank"><img src="https://img.shields.io/badge/License-CC%20BY%204.0-blue.svg" alt="https://creativecommons.org/licenses/by/4.0/" /></a>
+<dt>Download serialization:</dt><dd><span><a href="ontology.json" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License: </dt><dd><a href="http://insertlicenseURIhere.org" target="_blank"><img src="https://img.shields.io/badge/License-license%20name%20goes%20here-blue.svg" alt="http://insertlicenseURIhere.org" /></a>
 </dd><dt>Cite as:</dt>
 <dd>Seppo Törmä (seppo.torma@visualynk.com),Yuan Zheng (yuan.zheng@aalto.fi).</dd>
 </dl>
