--- a/sections/crossref-en.html
+++ b/sections/crossref-en.html
@@ -49,7 +49,9 @@ This section provides details for each class and property defined by Context ont
          </dd>
          <dt>is in domain of</dt>
          <dd>
-            <a href="#isContentOf"
+            <a href="#hasNamedGraph"
+               title="http://w3id.org/digitalconstruction/Contexts#hasNamedGraph">has named graph</a>
+            <sup class="type-dp" title="data property">dp</sup>, <a href="#isContentOf"
                title="http://w3id.org/digitalconstruction/Contexts#isContentOf">is content of</a>
             <sup class="type-op" title="object property">op</sup>
          </dd>
@@ -577,6 +579,38 @@ This section provides details for each class and property defined by Context ont
                <a href="#nextContext"
                   title="http://w3id.org/digitalconstruction/Contexts#nextContext">next context</a>
                <sup class="type-op" title="object property">op</sup>
+            </dd>
+         </dl>
+      </div>
+   </div>
+</div><div id="dataproperties">
+   <h3 id="dataproperties-headline" class="list">Data Properties</h3>
+   <ul class="hlist">
+      <li>
+         <a href="#hasNamedGraph"
+            title="http://w3id.org/digitalconstruction/Contexts#hasNamedGraph">
+            <span>has named graph</span>
+         </a>
+      </li>
+   </ul>
+   <div class="entity" id="hasNamedGraph">
+      <h3>has named graph<sup class="type-dp" title="data property">dp</sup>
+         <span class="backlink"> back to <a href="#toc">ToC</a> or <a href="#dataproperties">Data Property ToC</a>
+         </span>
+      </h3>
+      <p>
+         <strong>IRI:</strong> http://w3id.org/digitalconstruction/Contexts#hasNamedGraph</p>
+      <div class="description">
+         <dl>
+            <dt>has domain</dt>
+            <dd>
+               <a href="#ContentGraph"
+                  title="http://w3id.org/digitalconstruction/Contexts#ContentGraph">content graph</a>
+               <sup class="type-c" title="class">c</sup>
+            </dd>
+            <dt>has range</dt>
+            <dd>
+               <span class="dotted" title="http://www.w3.org/2001/XMLSchema#anyURI">any u r i</span>
             </dd>
          </dl>
       </div>
