--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -106,4 +106,11 @@ This ontology has the following classes and properties.</span>
          <span>previous context</span>
       </a>
    </li>
+</ul><h4>Data Properties</h4><ul class="hlist">
+   <li>
+      <a href="#hasNamedGraph"
+         title="http://w3id.org/digitalconstruction/Contexts#hasNamedGraph">
+         <span>has named graph</span>
+      </a>
+   </li>
 </ul>
