--- a/sections/introduction-en.html
+++ b/sections/introduction-en.html
@@ -1,6 +1,14 @@
 <h2 id="intro" class="list">Introduction <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <span class="markdown">
-This is a place holder text for the introduction. The introduction should briefly describe the ontology, its motivation, state of the art and goals.</span>
+To capture the evolution of construction data during a project, each
+value is associated with a context. The content of a context is contained
+in multiple named graphs. Each piece of RDF data - that is, an RDF
+statement or a triple - belongs to a particular graph. The same
+property of a same object can have multiple different values belonging
+to different graphs.
+
+<img src="context-model.png">
+
 <div id="namespacedeclarations">
 <h3 id="ns" class="list">Namespace declarations</h3>
 <div id="ns" align="center">
