--- a/sections/references-en.html
+++ b/sections/references-en.html
@@ -1,5 +1,19 @@
 
 <h2 id="ref" class="list">References <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
 <span class="markdown">
-Add your references here. It is recommended to have them as a list.</span>
+
+<p>
+[Lebo, 2013]	Lebo, T., Sahoo, S. and McGuinness, D., 2013. PROV-O:
+The PROV Ontology, W3C Recommendation. URL:
+https://www.w3.org/TR/prov-o/.
+</p>
+<p>
+[Nguyen, 2014]	Nguyen, V., Bodenreider, O., & Sheth, A. (2014). Don't
+like RDF reification?: Making statements about statements using
+singleton property. In Proceedings of the 23rd International
+Conference on World Wide Web (pp. 759-770). ACM.
+</p>
+
+
+</span>
 
