--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -1,6 +1,18 @@
 <h2 id="overv" class="list">Context ontology for digital construction: Overview <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-<span class="markdown">
-This ontology has the following classes and properties.</span>
+
+<p> The central concepts of the context ontology are ContextFramework and Context, as shown in the following figure.
+</p>
+
+<img src="sections/context-model.png" alt="Context model" height="200">
+
+<p>
+The representation of provenance metadata associated to graphs is based on the relations of the PROV-O ontology (Lebo, 2013). 
+</p>
+
+<p>
+Context ontology has the following classes and properties.
+</p>
+
 <h4>Classes</h4>
 <ul class="hlist">
    <li>
