--- a/sections/introduction-en.html
+++ b/sections/introduction-en.html
@@ -1,59 +1,53 @@
 <h2 id="intro" class="list">Introduction <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-<p>
-Construction and renovation projects are characterized the evolution of information over the duration of their
-execution. The designs start from abstract requirements and proceeds to increasingly refined models, also branching
-according to different disciplines (architectural design, structural engineering, and so on). Various – and potentially
-also evolving – groupings of the entities are defined for different tasks such as procurement, transportation and
-installation. Moreover, the planning of the work starts from high-level objectives and constraints, and proceeds from
-project plans and master schedules to phase schedules, lookahead plans and weekly plans.
-</p>
-<p>
-In the both refinement dimensions – design and planning – each successive level refines the information contained in the
-previous level by adding new information about the entities that already existed, and also add new entities, typically
-as substructure of the already specified entities at the previous refinement levels. The amount of information can grow
-many times over from one level to the next. In practice, each level also introduces incompatible changes such as
-removing existing entities or giving revised values to properties.
-</p>
-<p>
-In the design area these stages of refinement – or levels of detail/development – have been specified as different LOD
-frameworks, most containing prespecified levels with unambiguous content requirements. In the planning domain, the
+
+<p> Construction lifecycle is characterized by the evolution of information in many different areas: requirements,
+designs, plans, progress of execution, and so on. The volume of information grows, and objects are removed and their
+relations and properties are changed. Designs starts from abstract requirements and proceeds to increasingly refined
+models, also branching according to different disciplines: architectural design, structural engineering, and so
+on. Various groupings of the entities are created and managed for different tasks such as procurement, transportation
+and installation. Moreover, the planning of the work starts from high-level objectives and constraints, and proceeds
+from project plans and master schedules to phase schedules, lookahead plans and weekly plans.  </p>
+
+<p> At each successive level refines the information contained in the previous level by adding new information about the
+entities that already existed, and also add new entities, typically as substructure of the already specified entities at
+the previous refinement levels. The amount of information can grow many times over from one level to the next. In
+practice, each level also introduces incompatible changes such as removing existing entities or giving revised values to
+properties. In the design area these stages of refinement – or levels of detail/development – have been specified as different
+LOD frameworks, most containing prespecified levels with unambiguous content requirements. In the planning domain, the
 levels are usually more loosely defined and based on prevailing practices. It should be noted that if plans are created
 in reference to building objects or spaces, the plans will also depend on the design information. That is, a particular
-plan may be based on design information at a particular level of refinement.
-</p>
-<p>
-In addition to the refinement of information, renovation and construction projects are also characterized by unexpected
-and unplanned changes that create a need to change designs or plans. Consequently, there will be additional contexts of
-information that are dynamically created during the execution. The change management needs apply both to BIM models and
-construction plans, as well as some other relevant organizing information, such as breakdown structures.
-</p>
-<p>
-This all means that renovation projects are characterized by a very complex structure of information contexts consisting of 
-independently developing but interdependent threads of refinement (design and plans are refined separately but plans depend on designs),
-partly predefined and partly dynamic set of contexts in each thread.
-</p>
-<p>
-There are multiple alternative ways to represent multi-context data in RDF from explicit ontology-level modelling of
+plan may be based on design information at a particular level of refinement.  </p>
+
+<p> In addition, projects are also characterized by unexpected and unplanned changes that cause modifications in
+existing designs or plans. Consequently, there will be additional contexts of information that are dynamically created
+during the execution. This all means that renovation projects are characterized by a very complex structure of
+information contexts consisting of independently developing but interdependent threads of refinement (design and plans
+are refined separately but plans depend on designs), partly predefined and partly dynamic set of contexts in each
+thread.  </p>
+
+<p> There are multiple alternative ways to represent multi-context data in RDF from explicit ontology-level modelling of
 qualified properties such as in PROV-O (Lebo, 2013) or BFO-ISO (BFO-ISO, 2019), generic objectified properties such as
 in OPM (Rasmussen, 2018), RDF reification (Brickley, 2014), singleton properties (Nguyen, 2014), and various ways of
-using the named graphs of RDF Dataset such as nanopublications (Groth, 2010) or OVOpub (Callahan, 2013).
-</p>
-<p>
-The model adopted in this ontology is based on the last approach, the utilization of named graphs of RDF Datasets. The
-reason is that since construction is an organized engineering-oriented discipline,
-</p>
+using the named graphs of RDF Dataset such as nanopublications (Groth, 2010) or OVOpub (Callahan, 2013).  </p>
+
+<p>The context ontology uses the approach mentioned last: the utilization of named graphs of RDF Datasets. It is
+particularly suitable for data produced in construction and renovation projects. As the information production is
+organized and engineering-oriented: </p>
+
 <ul>
-  <li>There are usually large datasets whose entities belong to the same context and have the same provenance
+  <li>there are usually large datasets whose entities belong to the same context and have the same provenance
   information (BIM models, construction plans, breakdown structures);
   </li>
-  <li>The static property metadata (such as quantity kinds, units of measurement, and tolerances) is similar
+  <li>the static property metadata (such as quantity kinds, units of measurement, and tolerances) is similar
   throughout the same dataset for the same properties, since they are results of organized design, engineering or
   management work.
   </li>
 </ul>
+
 <p>
 The ontology is therefore based on the following principles:
 </p>
+
 <ul>
   <li>Each dataset is stored into a separate named graph of an RDF dataset. If the dataset contains data that has
   different origin or different context – such as different LOD level – the dataset needs to be split into several
@@ -67,15 +61,17 @@ The ontology is therefore based on the following principles:
   relations, the provenance of the data and the relevant property metadata at graph level.
   </li>
 </ul>
+
+<img src="sections/context-named-graph-example.png" alt="Context model" height="260">
+
 <p>
-This solution makes it possible to manage context-related data about any entities and any properties in a transparent
+The graph-based approach makes it possible to manage context-related data about any entities and any properties in a transparent
 and orthogonal manner. Moreover, many Semantic Web tools work well with this model: RDF databases support it, there is a
 standard serialization format called Trig (Bizer, 2014) – that is based on Turtle (Prud'hommeaux, 2014) – for
 serializing RDF datasets containing named graphs, and SPARQL has constructs to make queries to specific named graphs or
 to record the named graph in which an RDF statement (a triple) belongs to. Finally, the graph-level representation is
 extremely economic in terms of the storage capacity.
 </p>
-<img src="sections/context-model.png">
 
 <div id="namespacedeclarations">
 <h3 id="ns" class="list">Namespace declarations</h3>
