--- a/sections/overview-en.html
+++ b/sections/overview-en.html
@@ -3,7 +3,7 @@
 <p> The central concepts of the context ontology are ContextFramework and Context, as shown in the following figure.
 </p>
 
-<img src="sections/context-model.png" alt="Context model" height="200">
+<img src="sections/context-model.png" alt="Context model" height="300" align="middle">
 
 <p>
 The representation of provenance metadata associated to graphs is based on the relations of the PROV-O ontology (Lebo, 2013). 
