Image centering, references

--- a/sections/introduction-en.html
+++ b/sections/introduction-en.html
@@ -68,7 +68,9 @@ The ontology is therefore based on the following principles:
   </li>
 </ol>
 
-<img src="sections/context-named-graph-example.png" alt="Example of context and named graphs" height="320" align="middle">
+<center>
+<img src="sections/context-named-graph-example.png" alt="Example of context and named graphs" height="320">
+</center>
 
 <p>
 The graph-based approach makes it possible to manage context-related data about any entities and any properties in a transparent
