--- a/sections/references-en.html
+++ b/sections/references-en.html
@@ -1,19 +1,34 @@
 
-<h2 id="ref" class="list">References <span class="backlink"> back to <a href="#toc">ToC</a></span></h2>
-<span class="markdown">
+<h2 id="ref" class="list">References <span class="backlink"> back to
+<a href="#toc">ToC</a></span></h2>
 
-<p>
-[Lebo, 2013]	Lebo, T., Sahoo, S. and McGuinness, D., 2013. PROV-O:
-The PROV Ontology, W3C Recommendation. URL:
-https://www.w3.org/TR/prov-o/.
-</p>
-<p>
-[Nguyen, 2014]	Nguyen, V., Bodenreider, O., & Sheth, A. (2014). Don't
-like RDF reification?: Making statements about statements using
-singleton property. In Proceedings of the 23rd International
-Conference on World Wide Web (pp. 759-770). ACM.
-</p>
+<p> [BFO-ISO, 2019] BFO-ISO (2019), Basic Formal Ontology, OWL definition draft for ISO standard ISO/IEC:21838-2,
+fetched 2019-12-19. URL: https://buffalo.app.box.com/v/bfo-iso-owl-cl/folder/81126451877.  </p>
 
+<p>[Bizer, 2014] Bizer, C., & Cyganiak, R. (2014). RDF 1.1 TriG. W3C recommendation, 25 February 2014. URL:
+https://www.w3.org/TR/trig/.  </p>
 
-</span>
+<p> [Brickley, 2014] Brickley, D., Guha, R. V., & McBride, B. (2014). RDF Schema 1.1. W3C recommendation, 25,
+2004-2014. URL: https://www.w3.org/TR/rdf-schema/ </p>
+
+<p> [Callahan, 2013] Callahan, A., & Dumontier, M. (2013). Ovopub: Modular data publication with minimal
+provenance. arXiv preprint arXiv:1305.6800. </p>
+
+<p> [Groth, 2010]  Groth, P., Gibson, A., & Velterop, J. (2010). The anatomy of a nanopublication. Information
+Services & Use, 30(1-2), 51-56. </p>
+
+<p> [Lebo, 2013] Lebo, T., Sahoo, S. and McGuinness, D., 2013. PROV-O: The PROV Ontology, W3C Recommendation. URL:
+https://www.w3.org/TR/prov-o/.  </p>
+
+<p> [Nguyen, 2014] Nguyen, V., Bodenreider, O., & Sheth, A. (2014). Don't like RDF reification?: Making statements about
+statements using singleton property. In Proceedings of the 23rd International Conference on World Wide Web
+(pp. 759-770). ACM.  </p>
+
+<p> [Prud'hommeaux, 2014] Prud'hommeaux, E. and Carothers, G., 2014. RDF 1.1 Turtle – Terse RDF Triple Language. W3C
+Recommendation. URL: https://www.w3.org/TR/turtle/. </p>
+
+<p> [Rasmussen, 2018] Rasmussen, M., Lefrançois, M., Bonduel, M., Hviid, C., & Karlshøj, J. (2018). OPM: An ontology for
+describing properties that evolve over time. In proc. of 6th Linked Data in Architecture and Construction
+Workshop. London, UK. </p>
+
 
