--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <head>
 <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
- <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>Contexts in digital construction</title>
+ <link rel="stylesheet" href="resources/primer.css" media="screen" />    <link rel="stylesheet" href="resources/rec.css" media="screen" />    <link rel="stylesheet" href="resources/extra.css" media="screen" />    <link rel="stylesheet" href="resources/owl.css" media="screen" />    <title>Digital construction - Contexts</title>
 
 
 <!-- SCHEMA.ORG METADATA -->
-<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"http://w3id.org/digitalconstruction/Contexts","image":"http://vowl.visualdataweb.org/webvowl/#iri=http://w3id.org/digitalconstruction/Contexts","name":"Contexts in digital construction", "headline":"Context ontology provides the basic representation mechanisms for multi-context information present in all contruction and renovation projects, including planned and actual values, as-designed and as-built models, and different levels of detail/development. The ontology allows the definition of different context frameworks, to create contexts withing the frameworks, and associating content to contexts. At the implementation level, the content is stored in different named graphs of an RDF Dataset and the representation of context frameworks anbd contexts are managed in the default graph of the RDF Dataset.", "datePublished":"2019-12-20", "license":"https://creativecommons.org/licenses/by/4.0/", "author":[{"@type":"Person","name":"Seppo Törmä (seppo.torma@visualynk.com)"},{"@type":"Person","name":"Yuan Zheng (yuan.zheng@aalto.fi)"}]}</script>
+<script type="application/ld+json">{"@context":"http://schema.org","@type":"TechArticle","url":"http://w3id.org/digitalconstruction/Contexts","image":"http://vowl.visualdataweb.org/webvowl/#iri=http://w3id.org/digitalconstruction/Contexts","name":"Digital construction - Contexts", "headline":"Context ontology provides the basic representation mechanisms for multi-context information present in all contruction and renovation projects, including planned and actual values, as-designed and as-built models, and different levels of detail/development. The ontology allows the definition of different context frameworks, to create contexts withing the frameworks, and associating content to contexts. At the implementation level, the content is stored in different named graphs of an RDF Dataset and the representation of context frameworks anbd contexts are managed in the default graph of the RDF Dataset.", "datePublished":"2019-12-20", "license":"https://creativecommons.org/licenses/by/4.0/", "author":[{"@type":"Person","name":"Seppo Törmä (seppo.torma@visualynk.com)"},{"@type":"Person","name":"Yuan Zheng (yuan.zheng@aalto.fi)"}]}</script>
 
 <script src="resources/jquery.js"></script> 
 <script src="resources/marked.min.js"></script> 
@@ -59,7 +59,7 @@ function loadTOC(){
 <div class="container">
 <div class="head">
 <div style="float:right">language <a href="index-en.html"><b>en</b></a> </div>
-<h1>Contexts in digital construction</h1>
+<h1>Digital construction - Contexts</h1>
 <h2>Release  2019-12-20</h2>
 
 
@@ -72,7 +72,7 @@ function loadTOC(){
 
 <dt>Download serialization:</dt><dd><span><a href="ontology.json" target="_blank"><img src="https://img.shields.io/badge/Format-JSON_LD-blue.svg" alt="JSON-LD" /></a> </span><span><a href="ontology.xml" target="_blank"><img src="https://img.shields.io/badge/Format-RDF/XML-blue.svg" alt="RDF/XML" /></a> </span><span><a href="ontology.nt" target="_blank"><img src="https://img.shields.io/badge/Format-N_Triples-blue.svg" alt="N-Triples" /></a> </span><span><a href="ontology.ttl" target="_blank"><img src="https://img.shields.io/badge/Format-TTL-blue.svg" alt="TTL" /></a> </span></dd><dt>License: </dt><dd><a href="https://creativecommons.org/licenses/by/4.0/" target="_blank"><img src="https://img.shields.io/badge/License-https://creativecommons.org/licenses/by/4.0/-blue.svg" alt="https://creativecommons.org/licenses/by/4.0/" /></a>
 </dd><dt>Cite as:</dt>
-<dd>Seppo Törmä (seppo.torma@visualynk.com),Yuan Zheng (yuan.zheng@aalto.fi). Contexts in digital construction.</dd>
+<dd>Seppo Törmä (seppo.torma@visualynk.com),Yuan Zheng (yuan.zheng@aalto.fi). Digital construction - Contexts.</dd>
 </dl>
 
 <hr/>
